Added launch options + infos on music streaming

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,6 +2,11 @@
 // TF2 Anti-Virus by Casual v1.0
 //------------------------------------------------
 
+// Launch options:
+// -window +cl_cloud_settings 0 -w 1840 -h 1050 -toconsole -novid -nocdaudio
+// Keep in mind that those options fit my personal use on mac os x
+// The correct 16:10 resolution is 1680*1050, but increasing the width provides a better FOV.
+
 // Protection against server_can_execute bypass
 // Make your cfg/config.cfg read-only for extra protection
 cl_allowupload 0
@@ -40,6 +45,7 @@ alias disable_voice "alias toggle_voice enable_voice; toggle_off_voice"
 alias toggle_on_voice "volume 0; +voicerecord; say MusicStreaming mode [ON]: prepare to chill; unbind v; unbind MOUSE4; unbind MOUSE5"
 alias toggle_off_voice "volume 0.130000; -voicerecord; say MusicStreaming mode [OFF]; bind v +voicerecord; bind MOUSE4 +voicerecord; bind MOUSE5 +voicerecord"
 bind "9" "say waiting for my ping to calm down"
+// My current method is to stream what my speakers receive. So I have to set the game volume to 0 to avoid noises.
 
 // bind to trick afk managers
 bind p toggle_afk
