--- a/config.cfg
+++ b/config.cfg
@@ -73,7 +73,7 @@ bind "MWHEELDOWN" "+jump"
 publish_file_last_dir ""
 tf_matchgroups "0"
 youtube_http_proxy ""
-cl_thirdperson "0"
+// cl_thirdperson "0"
 store_version "1"
 cl_showhelp "0"
 sixense_enabled "0"
@@ -333,7 +333,7 @@ tf_training_has_prompted_for_forums "1"
 tf_training_has_prompted_for_options "1"
 tf_training_has_prompted_for_loadout "1"
 cl_ask_bigpicture_controller_opt_out "0"
-tf_last_store_pricesheet_version "50126"
+tf_last_store_pricesheet_version "33019"
 cl_mvm_wave_status_visible_during_wave "0"
 tf_build_menu_controller_mode "0"
 tf_simple_disguise_menu "0"
@@ -411,7 +411,7 @@ sv_specaccelerate "5"
 sv_specspeed "3"
 sv_specnoclip "1"
 sv_backspeed "0.6"
-sv_skyname "sky_dustbowl_01"
+sv_skyname "sky_goldrush_01"
 scene_showfaceto "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -521,7 +521,7 @@ video_quicktime_decode_gamma "0"
 r_rootlod "2"
 mat_monitorgamma_tv_enabled "0"
 r_waterforceexpensive "0"
-mat_queue_mode "0"
+mat_queue_mode "2"
 mat_queue_report "0"
 joy_axisbutton_threshold "0.3"
 joy_axis_deadzone "0.2"
