rebind and smooth cancel for better gameplay

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -98,7 +98,7 @@ cl_cmdrate 67
 cl_interp_ratio 1
 cl_interp .0152	// Tweak. Recommend 0.0152 for projectiles/backstabs/DR activation
 rate 100000.000000
-cl_smooth 1 // View smoothing. Experiment with setting to "0" if you like.
+cl_smooth 0
 cl_smoothtime .1
 cl_pred_optimize "2"
 cl_showerror 0
