--- a/config.cfg
+++ b/config.cfg
@@ -73,7 +73,7 @@ bind "MWHEELDOWN" "+jump"
 publish_file_last_dir ""
 tf_matchgroups "0"
 youtube_http_proxy ""
-// cl_thirdperson "0"
+cl_thirdperson "0"
 store_version "1"
 cl_showhelp "0"
 sixense_enabled "0"
@@ -411,7 +411,7 @@ sv_specaccelerate "5"
 sv_specspeed "3"
 sv_specnoclip "1"
 sv_backspeed "0.6"
-sv_skyname "sky_goldrush_01"
+sv_skyname "sky_well_01"
 scene_showfaceto "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -447,7 +447,7 @@ budget_panel_width "512"
 budget_panel_height "384"
 snd_legacy_surround "0"
 snd_pitchquality "1"
-volume ".2"
+volume ".02"
 snd_musicvolume "0.060000"
 snd_mixahead ".1"
 adsp_debug "0"
@@ -462,7 +462,7 @@ snd_mute_losefocus "0"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "yartFF"
+name "khan't"
 password ""
 cl_clanid "0"
 bugreporter_uploadasync "0"
