Optimised script exe, and random things

--- a/config.cfg
+++ b/config.cfg
@@ -29,7 +29,7 @@ bind "q" "voice_menu_1"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "open_charinfo_direct"
-bind "u" "wait; +use_action_slot_item"
+bind "u" "say k"
 bind "v" "+voicerecord"
 bind "w" "+forward"
 bind "x" "voicemenu 2 6"
