--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -99,7 +99,7 @@ cl_interp_ratio 1
 cl_interp .0152	// Tweak. Recommend 0.0152 for projectiles/backstabs/DR activation
 rate 100000.000000
 cl_smooth 0
-cl_smoothtime .1
+// cl_smoothtime .1
 cl_pred_optimize "2"
 cl_showerror 0
 net_graph 1
@@ -164,7 +164,7 @@ cl_show_splashes 0
 mat_antialias				"0"	// def. ""	// low 2	# Anti-aliasing on(1,2,4,8)/off(0) 
 mat_filtertextures			"0"	// def. "1"	// low 0	# Filter textures on(1)/off(0)
 mat_forceaniso				"0"	// def. ""	// low 1	# Anisotropic filtering on(1,2,4,8,16)/off(0) 
-mat_trilinear				"0"	// def. ""	// low 1	# Trilinear filtering on(1)/off(0)
+mat_trilinear				"1"	// def. ""	// low 1	# Trilinear filtering on(1)/off(0)
 mat_aaquality 0
 
 cl_ejectbrass 0
@@ -212,8 +212,8 @@ r_occlusion				"0"	// def. "1"		# Use the occlusion system from the SourceEngine
 r_worldlights				"0"	// def. "4"		# Number of world lights to use per vertex
 mat_disable_lightwarp 			"1"	// def. "0"		# UNKOWN -> Exact Effect unkown, but its a part of Phongshading. A 1D Texture for some shading.
 r_flashlightdepthtexture		"0"	// def. "1"		# 1 = High, 0 = Low
-r_shadowrendertotexture			"0"	// def. "" was "2"		# 1 = High, 0 = Low
-r_shadowmaxrendered			"0"	// def. ""		# Max. count of rendered Shadow [TF2-VideoConfigMenu: 0=min 32=High] //FF
+r_shadowrendertotexture			"0"	// def. "" was "2"	# 1 = High, 0 = Low
+r_shadowmaxrendered			"8"	// def. ""		# Max. count of rendered Shadow [TF2-VideoConfigMenu: 0=min 32=High] //FF
 nb_shadow_dist = "400"
 // r_avglight 0
 r_ambientboost 0
@@ -225,8 +225,9 @@ mat_envmaptgasize			"8"	// def. "32"		# UNKOWN -> EnviromentMap Size for Skybox 
 mat_max_worldmesh_vertices 512
 mat_parallaxmap				"0"	// def. "0"		# Use Parallaxmapping
 
-r_3dnow 0
 r_3dsky 0
+// r_3dnow 0
+// Source will determine what is better by itself
 
 mat_forcemanagedtextureintohardware 0
 cl_forcepreload 1
@@ -247,18 +248,20 @@ studio_queue_mode 1
 mp_usehwmmodels "-1"
 mp_usehwmvcds "-1"
 
-rope_shake 0
+rope_rendersolid 0
 rope_smooth 0
-rope_wind_dist 0
-rope_collide 0
-rope_subdiv 0
-rope_smooth_enlarge 0
-rope_smooth_maxalpha 0
-rope_smooth_maxalphawidth 0
-rope_smooth_minalpha 0
-rope_smooth_minwidth 0
-rope_averagelight 0
-r_ropetranslucent 0
+
+// rope_shake 0
+// rope_wind_dist 0
+// rope_collide 0
+// rope_subdiv 0
+// rope_smooth_enlarge 0
+// rope_smooth_maxalpha 0
+// rope_smooth_maxalphawidth 0
+// rope_smooth_minalpha 0
+// rope_smooth_minwidth 0
+// rope_averagelight 0
+// r_ropetranslucent 0
 
 cc_subtitles 0
 cl_downloadfilter "nosounds"
