starting to reorganize config files

--- a/ffcfg_keybinds.cfg
+++ b/ffcfg_keybinds.cfg
@@ -17,7 +17,7 @@ bind "e" "cl_trigger_first_notification"
 bind "f" "+taunt"
 bind "g" "-use_action_slot_item ; +use_action_slot_item"
 bind "h" "+context_action"
-bind "i" "vr_reset_home_pos"
+bind "i" "stop ; record a"
 bind "j" "say"
 bind "k" "say_team"
 bind "l" "+use_action_slot_item"
@@ -30,7 +30,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "open_charinfo_direct"
 bind "u" "say k"
-bind "v" "+voicerecord"
+bind "v" "voice_menu_3"
 bind "w" "+forward"
 bind "x" "voicemenu 2 6"
 bind "y" "open_charinfo_backpack"
@@ -134,7 +134,6 @@ cl_notifications_move_time "0.5"
 cl_trading_show_requests_from "3"
 tf_time_loading_item_panels "0.0005"
 tf_store_stamp_donation_add_timestamp "1392450741"
-tf_explanations_tradingpanel "1"
 muzzleflash_light "0"
 hud_classautokill "1"
 overview_health "1"
@@ -288,7 +287,7 @@ sixense_walking_exponent "1.0"
 fov_desired "90.000000"
 tf_highfive_hintcount "3"
 cl_steamscreenshots "1"
-cl_hud_minmode "0"
+cl_hud_minmode "0.000000"
 viewmodel_fov_demo "100"
 tf_hud_no_crosshair_on_scope_zoom "0"
 cl_ask_favorite_opt_out "0"
@@ -326,14 +325,14 @@ cl_crosshair_scale "26.670000"
 cl_hud_killstreak_display_time "3"
 cl_hud_killstreak_display_fontsize "0"
 cl_hud_killstreak_display_alpha "120"
-tf_recent_achievements "2317,2310,1014,1811,1029,1331"
+tf_recent_achievements "1838,1331,1029,1811,1014,2310"
 tf_training_has_prompted_for_training "2"
 tf_training_has_prompted_for_offline_practice "1"
 tf_training_has_prompted_for_forums "1"
 tf_training_has_prompted_for_options "1"
 tf_training_has_prompted_for_loadout "1"
 cl_ask_bigpicture_controller_opt_out "0"
-tf_last_store_pricesheet_version "33019"
+tf_last_store_pricesheet_version "28569"
 cl_mvm_wave_status_visible_during_wave "0"
 tf_build_menu_controller_mode "0"
 tf_simple_disguise_menu "0"
@@ -411,7 +410,7 @@ sv_specaccelerate "5"
 sv_specspeed "3"
 sv_specnoclip "1"
 sv_backspeed "0.6"
-sv_skyname "sky_well_01"
+sv_skyname "sky_dustbowl_01"
 scene_showfaceto "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -447,7 +446,7 @@ budget_panel_width "512"
 budget_panel_height "384"
 snd_legacy_surround "0"
 snd_pitchquality "1"
-volume ".02"
+volume ".05"
 snd_musicvolume "0.060000"
 snd_mixahead ".1"
 adsp_debug "0"
@@ -462,7 +461,7 @@ snd_mute_losefocus "0"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "khan't"
+name "yartFF"
 password ""
 cl_clanid "0"
 bugreporter_uploadasync "0"
@@ -521,7 +520,7 @@ video_quicktime_decode_gamma "0"
 r_rootlod "2"
 mat_monitorgamma_tv_enabled "0"
 r_waterforceexpensive "0"
-mat_queue_mode "2"
+mat_queue_mode "-1"
 mat_queue_report "0"
 joy_axisbutton_threshold "0.3"
 joy_axis_deadzone "0.2"
