Avoid erasing current keybinds with installs and uptades

--- a/ffcfg_default.cfg
+++ b/ffcfg_default.cfg
@@ -1,5 +1,6 @@
 echo ">> START (ffcfg_default.cfg) _______________________________________"
 
+exec ffcfg_default_config.cfg
 exec ffcfg_play
 exec ffcfg_security_security
 
