Fixed new behavior for action slot

--- a/ffcfg_play_keybinds.cfg
+++ b/ffcfg_play_keybinds.cfg
@@ -33,7 +33,7 @@ bind "n" "disguiseteam"
 
 // Actions
 bind "f" "+taunt"
-bind "g" "-use_action_slot_item ; +use_action_slot_item"
+bind "g" "+use_action_slot_item"
 bind "h" "+context_action"
 
 // In-Game
