--- a/ffcfg_play.cfg
+++ b/ffcfg_play.cfg
@@ -5,5 +5,6 @@ exec ffcfg_play_advancedkeybinds
 exec ffcfg_play_graphic
 exec ffcfg_play_display
 exec ffcfg_play_input
+exec ffcfg_play_misc
 
 echo "<< END (ffcfg_play.cfg) ________________________________________"
