Regrouped keybinds play config

--- a/ffcfg_play.cfg
+++ b/ffcfg_play.cfg
@@ -1,7 +1,6 @@
 echo ">> START (ffcfg_play.cfg) _______________________________________"
 
-// exec ffcfg_play_keybinds
-// exec ffcfg_play_advancedkeybinds
+// exec ffcfg_play_binds
 exec ffcfg_play_graphic
 exec ffcfg_play_display
 exec ffcfg_play_input
