Split commands remaining in autoexec.cfg into appropriate files

--- a/ffcfg_play_misc.cfg
+++ b/ffcfg_play_misc.cfg
@@ -4,26 +4,55 @@ echo ">> START (ffcfg_play_misc.cfg) _______________________________________"
 cl_updaterate 67 
 cl_cmdrate 67
 cl_interp_ratio 1
-cl_interp .0152	// Tweak. Recommend 0.0152 for projectiles/backstabs/DR activation
+cl_interp .0152 // Tweak. Recommend 0.0152 for projectiles/backstabs/DR activation
 rate 100000.000000
 cl_smooth 0
 // cl_smoothtime .1
-cl_pred_optimize "2"
+cl_pred_optimize 2
 
 // _ Sound
 snd_legacy_surround 0
-snd_surround_speakers 0 // 0 = headphones 1 = speakers 5 = surround sound (virtual or real)
-dsp_enhance_stereo 1 // "1" for headphones, "0" for speakers or surround sound 
+snd_surround_speakers 0		// 0 for headphones, 1 for speakers, 5 = surround sound (virtual or real)
+dsp_enhance_stereo 1		// 1 for headphones, 0 for speakers or surround sound 
 snd_disable_mixer_duck 0
 snd_pitchquality 1
 dsp_slow_cpu 1
 snd_spatialize_roundrobin 0
 
 // _ Advanced Sound
-snd_mix_async "1"
+snd_mix_async 1
 snd_mixahead .1 // tweak if sounds are delayed or cut off
 snd_async_fullyasync 1
 snd_async_spew_blocking 1
 // soundinfo
+
+mat_levelflush 1
+r_hunkalloclightmaps 0
+r_lightcache_zbuffercache 0
+
+// _ multicore rendering--if crashes occur, try toggling bone_setup, client_shadow_manager, queued_decals, and/or queued_post_processing to "0"
+mat_queue_mode "-1" // _ possible performance gain from setting to "2" for multicore or "1" for dual core
+host_thread_mode "2"
+cl_threaded_bone_setup "1"
+cl_threaded_client_leaf_system "0" // legacy
+r_threaded_client_shadow_manager "1" 
+r_threaded_particles "1"
+r_threaded_renderables "1"
+r_queued_decals "1"
+r_queued_post_processing "1"
+r_queued_ropes 1
+studio_queue_mode 1
+
+cc_subtitles 0
+cl_downloadfilter "nosounds"
+cl_allowdownload 0
+commentary 0
+overview_mode 0
+adsp_debug 0
+cl_clearhinthistory 1
+cl_showhelp 0
+
+mat_forcemanagedtextureintohardware 0
+cl_forcepreload 1
 
 echo "<< end (ffcfg_play_misc.cfg) ________________________________________"
