--- a/ffcfg_play_graphic.cfg
+++ b/ffcfg_play_graphic.cfg
@@ -6,7 +6,7 @@ mat_viewportupscale 1
 mat_viewportscale 1
 mat_phong 0
 
-// _ No Eyes/Teeth on models ... They look really scary
+// _ No Eyes/Teeth and facial expression on models
 r_eyegloss 0
 r_eyemove 0
 r_eyeshift_x 0
@@ -16,21 +16,123 @@ r_eyes 0
 r_eyesize 0
 blink_duration 0
 r_teeth 0
+r_flex 0
 
 // Ragdolls
-cl_ragdoll_collide			"1"	// def. "0"		# Collision between corpses on(1)/off(0)
-cl_ragdoll_forcefade			"0"	// def. "0"		# If set to "1" then cl_ragdoll_forcefade is used
-cl_ragdoll_fade_time			"15"	// def. "15"		# Fadingtime in seconds of corpses 0 => No Corpse
-cl_ragdoll_physics_enable		"1"	// def. "1"		# Ragdollsystem for the corpses on(1)/off(0) | off meens corpses standing around with no animation
+cl_ragdoll_collide		1	// def. "0"		# Collision between corpses on(1)/off(0)
+cl_ragdoll_forcefade		0	// def. "0"		# If set to "1" then cl_ragdoll_forcefade is used
+cl_ragdoll_fade_time		15	// def. "15"		# Fadingtime in seconds of corpses 0 => No Corpse
+cl_ragdoll_physics_enable	1	// def. "1"		# Ragdollsystem for the corpses on(1)/off(0) | off meens corpses standing around with no animation
 // r_ragdoll_pronecheck_distance << unknown command, stabby?
-g_ragdoll_fadespeed "600"
-g_ragdoll_lvfadespeed "100"
-ragdoll_sleepaftertime "5.0f"
+g_ragdoll_fadespeed		600
+g_ragdoll_lvfadespeed		100
+ragdoll_sleepaftertime		5.0f
 
-mat_antialias				"0"	// def. ""	// low 2	# Anti-aliasing on(1,2,4,8)/off(0) 
-mat_filtertextures			"0"	// def. "1"	// low 0	# Filter textures on(1)/off(0)
-mat_forceaniso				"0"	// def. ""	// low 1	# Anisotropic filtering on(1,2,4,8,16)/off(0) 
-mat_trilinear				"1"	// def. ""	// low 1	# Trilinear filtering on(1)/off(0)
+mat_antialias			0	// def. ""	// low 2	# Anti-aliasing on(1,2,4,8)/off(0) 
+mat_filtertextures		0	// def. "1"	// low 0	# Filter textures on(1)/off(0)
+mat_forceaniso			0	// def. ""	// low 1	# Anisotropic filtering on(1,2,4,8,16)/off(0) 
+mat_trilinear			1	// def. ""	// low 1	# Trilinear filtering on(1)/off(0)
 mat_aaquality 0
+
+cl_jiggle_bone_framerate_cutoff 0 
+
+r_drawflecks 0
+cl_new_impact_effects 0
+tracer_extra 0
+
+r_maxnewsamples 2
+r_maxsampledist 1
+
+r_lod 2 //
+r_rootlod 2
+mat_picmip 2
+mat_mipmaptextures 0
+cl_show_splashes 0
+cl_ejectbrass 0
+
+cl_rumblescale 0
+cl_debugrumble 0
+
+
+cl_detailfade				0	// def. "400"		# Distance across which detail props fade in
+cl_detaildist				0	// def. "1200"		# Distance at which detail props are no longer visible
+r_drawdetailprops			0	// def. "1"		# 0=Off, 1=Normal, 2=Wireframe
+cl_phys_props_enable			0	// def. "1"		# Physical Props on(1)/off(0) 
+cl_phys_props_max			5	// << Useless since physicle props is disable
+props_break_max_pieces			0	// def. "-1"		# Maximum prop breakable piece count (-1 = model default)
+r_propsmaxdist				5	// def. "1200"		# Behind this distance they are not rendered 
+
+mat_reduceparticles			1
+mat_reducefillrate			1	// def. ""		# Shaderthruput 0 = High (better Quality), 1 = Low (more fps)
+tf_particles_disable_weather 		1	// def. "0"		# Rain like on sawmill on(0)/off(1)
+
+lod_TransitionDist 0
+
+mp_decals				0	// def. "200"		# Count of Decals used for Multiplayer
+r_decal_cullsize			0	// def. "5"		# The distance (0-15) from which bulletholes are visible. Higher numbers mean a shorter viewing
+r_decals				0	// def. "2048"		# Count of Decals used by the entire SourceEngine
+r_drawmodeldecals			0	// def. ""		# Render decals on the Models on(1)/off(0) 
+r_maxmodeldecal				0	// def. "32"		# Count of Decals to Render on the Models
+
+muzzleflash_light 0
+cl_muzzleflash_dlight_1st 0
+
+mat_hdr_level				0	// def. ""		# Set to 0 for no HDR, 1 for LDR+bloom on HDR maps, and 2 for full HDR on HDR maps.
+mat_autoexposure_max			0	// def. "2"		# HDR Setting | 0-20 Sets the brightest (maximum) exposure that will be reached. Values over 20 should not be used in most cases.
+mat_autoexposure_min			0	// def. "0.5"		# HDR Setting | 0-20 Where 0 is darkest (minimum) exposure level that will be reached. Values over 20 should not be used in most cases. Typical values are less than 1.
+mat_bloomscale				0	// def. "1"		# Adjustment of the Bloomeffect (how strong it will appear)
+mat_disable_bloom			1	// def. "0"		# Bloom on(0)/off(1) 
+mat_motion_blur_enabled			0	// def. ""		# Motion Blur on(1)/off(0)
+mat_use_compressed_hdr_textures		1	// def. "1"		# Compress Texturs used with HDR (less Memoryusage in GraphicCard - Imagequality a little less)
+mat_fastspecular			0	// def. "1"		# Faster Spec but lower Quality on(1)/off(0)
+mat_filterlightmaps			0	// def. "1"		# Filtering ligthmaps on(1)/off(0) 
+mat_specular				0	// def. "1"		# Specular highlight on(1)/off(0) 
+r_dynamic				0	// def. "1"		# Dynamic lighting of Enviroment on(1)/off(0) 
+r_lightaverage				0	// def. "1"		# light averaging on(1)/off(0) 
+r_maxdlights				1	// def. "1"		# Determines the maximum number of dynamic lights visible on the screen. The larger this maximum, the more chance of slowdowns during scenes with multiple dynamic light sources. Reducing this value can improve performance in scenes with multiple dynamic lights, such as in heavy combat.
+r_PhysPropStaticLighting		0	// def. "1"		# Static Lighting on props on(1)/off(0) 
+r_occlusion				0	// def. "1"		# Use the occlusion system from the SourceEngine on(1)/off(0) 
+r_worldlights				0	// def. "4"		# Number of world lights to use per vertex
+mat_disable_lightwarp 			1	// def. "0"		# UNKOWN -> Exact Effect unkown, but its a part of Phongshading. A 1D Texture for some shading.
+r_flashlightdepthtexture		0	// def. "1"		# 1 = High, 0 = Low
+r_shadowrendertotexture			0	// def. "" was "2"	# 1 = High, 0 = Low
+r_shadowmaxrendered			8	// def. ""		# Max. count of rendered Shadow [TF2-VideoConfigMenu: 0=min 32=High] //FF
+nb_shadow_dist 400
+
+// r_avglight 0
+r_ambientboost 0
+r_ambientfactor 0
+r_ambientmin 0
+
+mat_envmapsize				8	// def. "128"		# EnviromentMap -> Background Images in not reachable Sections of the Map, same as the skybox | Greater Size value better Imagequality FF
+mat_envmaptgasize			8	// def. "32"		# UNKOWN -> EnviromentMap Size for Skybox ? Greater value better Imagequality (max 512 ?) FF
+mat_max_worldmesh_vertices 512
+mat_parallaxmap				0	// def. "0"		# Use Parallaxmapping
+
+r_3dsky 0
+// r_3dnow 0
+// Source will determine what is better by itself
+
+mp_usehwmmodels "-1"
+mp_usehwmvcds "-1"
+
+rope_rendersolid 0
+rope_smooth 0
+// rope_shake 0
+// rope_wind_dist 0
+// rope_collide 0
+// rope_subdiv 0
+// rope_smooth_enlarge 0
+// rope_smooth_maxalpha 0
+// rope_smooth_maxalphawidth 0
+// rope_smooth_minalpha 0
+// rope_smooth_minwidth 0
+// rope_averagelight 0
+// r_ropetranslucent 0
+
+r_waterforceexpensive 0
+mat_wateroverlaysize 1
+r_cheapwaterend 200
+r_cheapwaterstart 300
 
 echo "<< END (ffcfg_play_graphic.cfg) ________________________________________"
