--- a/ffcfg_play_graphic.cfg
+++ b/ffcfg_play_graphic.cfg
@@ -45,7 +45,7 @@ r_maxsampledist 1
 
 r_lod 2 //
 r_rootlod 2
-mat_picmip 2
+mat_picmip -1 // "2" for better fps, -1 for personal streaming purpose
 mat_mipmaptextures 0
 cl_show_splashes 0
 cl_ejectbrass 0
