Fixed the "0" key for votemenus. Added Undisguise script combined with attack3

--- a/ffcfg_play_advancedkeybinds.cfg
+++ b/ffcfg_play_advancedkeybinds.cfg
@@ -8,7 +8,7 @@ bind "]" "explode"
 bind "o" toggle_voicestream
 bind "p" toggle_afk
 bind "TAB" "+scoreboard"
-bind "9" "say waiting for my ping to calm down"
+bind "3" "+spec_action"
 
 // _ pause
 bind "=" demo_togglepause
