--- a/ffcfg_play_alias.cfg
+++ b/ffcfg_play_alias.cfg
@@ -19,6 +19,10 @@ alias toggle_off_afk "-forward; -right"
 alias +scoreboard "+showscores; net_graph 4; cl_showerror 1"
 alias -scoreboard "-showscores; net_graph 1; cl_showerror 0"
 
+// _ Undisguise and Action merged command
+alias +spec_action "+attack3 ; disguise 8 -2"
+alias -spec_action "-attack3"
+
 // _ DemoFiles viewing doesn't need performances
 alias demov toggle_demov
 alias toggle_demov enable_demov
