--- a/ffcfg_play_keybinds.cfg
+++ b/ffcfg_play_keybinds.cfg
@@ -11,6 +11,8 @@ bind "5" "slot5"
 bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
+bind "9" "slot9"
+bind "0" "slot10"
 
 // Movement
 bind "w" "+forward"
@@ -25,7 +27,6 @@ bind "MWHEELDOWN" "+jump"
 // Game Actions
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "3" "+attack3"
 bind "r" "+reload"
 bind "ALT" "dropitem"
 bind "b" "lastdisguise"
@@ -46,7 +47,6 @@ bind "v" "voice_menu_3"
 bind "x" "voicemenu 2 6"
 bind "F1" "impulse 201"
 bind "F4" "player_ready_toggle"
-bind "MOUSE4" "+voicerecord"
 bind "MOUSE5" "+voicerecord"
 
 // Misc
