Added NumPad Key bind

--- a/ffcfg_play_advancedkeybinds.cfg
+++ b/ffcfg_play_advancedkeybinds.cfg
@@ -13,4 +13,21 @@ bind "3" "+spec_action"
 // _ pause
 bind "=" demo_togglepause
 
+// NumPad
+bind "KP_INS"	"say /swap"	// 0
+bind "KP_END"			// 1
+bind "KP_DOWNARROW"		// 2
+bind "KP_PGDN"			// 3
+bind "KP_LEFTARROW"		// 4
+bind "KP_5"			// 5
+bind "KP_RIGHT_ARROW"		// 6
+bind "KP_HOME"			// 7
+bind "KP_UPARROW"		// 8
+bind "KP_PGUP"			// 9
+bind "KP_PLUS"			// +
+bind "KP_MINUS"			// -
+bind "KP_MULTIPLY"		// *
+bind "KP_SLASH"			// /
+bind "KP_ENTER"			// ENTER
+
 echo "<< END (ffcfg_play_advancedkeybinds.cfg) ________________________________________"
