Added bunch of trade messages binds and reg server aliases

--- a/ffcfg_play_advancedkeybinds.cfg
+++ b/ffcfg_play_advancedkeybinds.cfg
@@ -5,7 +5,6 @@ bind "[" "kill"
 bind "]" "explode"
 
 // _ Aliases
-bind "o" toggle_voicestream
 bind "p" toggle_afk
 bind "TAB" "+scoreboard"
 bind "3" "+spec_action"
@@ -15,15 +14,15 @@ bind "=" demo_togglepause
 
 // NumPad
 bind "KP_INS"	"say /swap"	// 0
-bind "KP_END"			// 1
-bind "KP_DOWNARROW"		// 2
-bind "KP_PGDN"			// 3
-bind "KP_LEFTARROW"		// 4
+bind "KP_END"	"load_itempreset 0"		// 1
+bind "KP_DOWNARROW"	 "load_itempreset 1"	// 2
+bind "KP_PGDN"		"load_itempreset 2"	// 3
+bind "KP_LEFTARROW"	"load_itempreset 3"	// 4
 bind "KP_5"			// 5
 bind "KP_RIGHT_ARROW"		// 6
-bind "KP_HOME"			// 7
-bind "KP_UPARROW"		// 8
-bind "KP_PGUP"			// 9
+bind "KP_HOME"		"say /dsay {lime} Selling Pages 2 to 5 of !bp yart."	// 7
+bind "KP_UPARROW"	"say /dsay {lime} Selling Strange Sticky Launcher (1 ref), Strange Blutsauger (2 ref)"	// 8
+bind "KP_PGUP"		"say /dsay {lime} Selling The filamental pyro hat (1 key). Festive Flare Gun (1 ref)"	// 9
 bind "KP_PLUS"			// +
 bind "KP_MINUS"			// -
 bind "KP_MULTIPLY"		// *
