--- a/ffcfg_play_alias.cfg
+++ b/ffcfg_play_alias.cfg
@@ -32,4 +32,11 @@ alias toggle_on_demov "mat_queue_mode 0; fps_max 48; demoui2; echo demo ON"
 alias toggle_off_demov "mat_queue_mode -1; fps_max 0; demoui2; echo demo OFF"
 // _ mat_queue_mode 0 fixes crashes when a jump of big number of ticks is made
 
+alias skd	"connect 74.91.113.52:27017"
+alias skt	"connect 192.223.26.94:27015"
+alias skb	"connect 192.223.26.231:27015"
+alias skd1	"connect 188.165.211.23:2005"
+alias skd2	"connect 94.23.226.212:2015"
+alias skg	"connect 94.23.226.200:2020"
+
 echo "<< END (ffcfg_play_alias.cfg) ________________________________________"
