Added M3 to continuously attack

--- a/ffcfg_play_alias.cfg
+++ b/ffcfg_play_alias.cfg
@@ -32,6 +32,13 @@ alias toggle_on_demov "mat_queue_mode 0; fps_max 74; demoui2; echo demo ON"
 alias toggle_off_demov "mat_queue_mode -1; fps_max 0; demoui2; echo demo OFF"
 // _ mat_queue_mode 0 fixes crashes when a jump of big number of ticks is made
 
+// _ Continuous Attack without having to maintain click
+alias toggle_attack enable_attack
+alias enable_attack "+attack ; alias toggle_attack disable_attack"
+alias disable_attack "-attack ; alias toggle_attack enable_attack"
+alias +attack_ "+attack"
+alias -attack_ "-attack ; alias toggle_attack enable_attack"
+
 alias skd	"connect 74.91.113.52:27017"
 alias skt	"connect 192.223.26.94:27015"
 alias skb	"connect 192.223.26.231:27015"
