--- a/ffcfg_play_keybinds.cfg
+++ b/ffcfg_play_keybinds.cfg
@@ -25,8 +25,9 @@ bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
 // Game Actions
-bind "MOUSE1" "+attack"
+bind "MOUSE1" "+attack_"
 bind "MOUSE2" "+attack2"
+bind "MOUSE3" "toggle_attack"
 bind "r" "+reload"
 bind "ALT" "dropitem"
 bind "b" "lastdisguise"
