--- a/ffcfg_play_advancedkeybinds.cfg
+++ b/ffcfg_play_advancedkeybinds.cfg
@@ -8,6 +8,8 @@ bind "]" "explode"
 bind "p" toggle_afk
 bind "TAB" "+scoreboard"
 bind "3" "+spec_action"
+bind "e" toggle_lastinv
+bind "z" "inspect ; load_itempreset 0"
 
 // _ pause
 bind "=" demo_togglepause
@@ -18,13 +20,13 @@ bind "KP_END"	"load_itempreset 0"		// 1
 bind "KP_DOWNARROW"	 "load_itempreset 1"	// 2
 bind "KP_PGDN"		"load_itempreset 2"	// 3
 bind "KP_LEFTARROW"	"load_itempreset 3"	// 4
-bind "KP_5"			// 5
-bind "KP_RIGHT_ARROW"		// 6
-bind "KP_HOME"		"say /dsay {lime} Selling Pages 2 to 5 of !bp yart."	// 7
-bind "KP_UPARROW"	"say /dsay {lime} Selling Strange Sticky Launcher (1 ref), Strange Blutsauger (2 ref)"	// 8
-bind "KP_PGUP"		"say /dsay {lime} Selling The filamental pyro hat (1 key). Festive Flare Gun (1 ref)"	// 9
-bind "KP_PLUS"			// +
-bind "KP_MINUS"			// -
+bind "KP_5"			"say 'The crits are strong with this kid.' ~yartFF on ZayneTheMayne" // 5
+bind "KP_RIGHTARROW"	"say [PSA] Did you know TF2 is now free to uninstall?"	// 6
+bind "KP_HOME"		"say get YART'D"	// 7
+bind "KP_UPARROW"	"say Lel I randomly clicked on you"	// 8
+bind "KP_PGUP"		"say Excuse me medic, you dropped something"	// 9
+bind "KP_PLUS"		"say ♫♫ Leave The Buster! Or No Uber! ♫♫"	// +
+bind "KP_MINUS"		"say Plot Twist: I don't even main sniper"	// -
 bind "KP_MULTIPLY"		// *
 bind "KP_SLASH"			// /
 bind "KP_ENTER"			// ENTER
