--- a/ffcfg_play_alias.cfg
+++ b/ffcfg_play_alias.cfg
@@ -8,6 +8,10 @@ alias toggle_on_voicestream "volume 0; +voicerecord; say MusicStreaming mode [ON
 alias toggle_off_voicestream "volume 0.130000; -voicerecord; say MusicStreaming mode [OFF]; bind v +voicerecord; bind MOUSE4 +voicerecord; bind MOUSE5 +voicerecord"
 // _ My current method is to stream what my speakers receive. So I have to set the game volume to 0 to avoid noises.
 
+//
+alias toggle_lastinv "lastinv ; lastdisguise"
+
+
 // _ bind to trick afk managers
 alias toggle_afk enable_afk
 alias enable_afk "alias toggle_afk disable_afk; toggle_on_afk"
@@ -20,7 +24,7 @@ alias +scoreboard "+showscores; net_graph 4; cl_showerror 1"
 alias -scoreboard "-showscores; net_graph 1; cl_showerror 0"
 
 // _ Undisguise and Action merged command
-alias +spec_action "+attack3 ; disguise 8 -2"
+alias +spec_action "+attack3 ; disguise 8 -2 ; dropitem"
 alias -spec_action "-attack3"
 
 // _ DemoFiles viewing doesn't need performances
@@ -39,11 +43,13 @@ alias disable_attack "-attack ; alias toggle_attack enable_attack"
 alias +attack_ "+attack"
 alias -attack_ "-attack ; alias toggle_attack enable_attack"
 
-alias skd	"connect 74.91.113.52:27017"
-alias skt	"connect 192.223.26.94:27015"
-alias skb	"connect 192.223.26.231:27015"
-alias skd1	"connect 188.165.211.23:2005"
-alias skd2	"connect 94.23.226.212:2015"
-alias skg	"connect 94.23.226.200:2020"
+alias skd	"connect 104.153.105.93:27017"
+alias skt	"connect 104.153.105.94:27015"
+alias skb	"connect 104.153.105.96:27015"
+alias skdeu	"connect 151.80.218.95:27015"
+alias sku	"connect 151.80.218.90:27016"
+
+alias srf	"connect 162.248.92.11:27015"
+alias mge	"connect 23.235.225.109:27030"
 
 echo "<< END (ffcfg_play_alias.cfg) ________________________________________"
