rendering and reviewing settings

--- a/record_cfg/settings.cfg
+++ b/record_cfg/settings.cfg
@@ -20,7 +20,6 @@ hud_combattext 1
 hud_combattext_healing 1
 cl_hud_minmode 0
 cl_hud_playerclass_playermodel_showed_confirm_dialog 1
-cl_hud_playerclass_use_playermodel 0
 tf_training_has_prompted_for_loadout 1
 cl_hud_playerclass_use_playermodel 1
 
@@ -65,10 +64,11 @@ alias m_sensitivity
 
 // record
 alias startrecording "host_timescale 0.001; snd_soundmixer Default_Mix; recframerate; exec record_name.cfg"
-alias stoprecording "endmovie; host_timescale 1; host_framerate 0; bind P startrecording"
-
+alias stoprecording "endmovie; host_timescale 1; host_framerate 0"
+alias rev "exec review.cfg"
+alias ren "exec render_clean.cfg"
 
 // change for each clip
 alias recframerate "host_framerate 1080"
-hud_saytext_time 0
-cl_voice_filter "................................................................................................"
+cl_hud_playerclass_use_playermodel 0
+ren
