no inventory during demos

--- a/record_cfg/settings.cfg
+++ b/record_cfg/settings.cfg
@@ -62,6 +62,12 @@ alias voice_menu_3 ""
 alias bind
 alias m_sensitivity
 
+alias open_charinfo
+alias open_charinfo_armory
+alias open_charinfo_backpack
+alias open_charinfo_crafting
+alias open_charinfo_direct
+
 // record
 alias startrecording "host_timescale 0.001; snd_soundmixer Default_Mix; recframerate; exec record_name.cfg"
 alias stoprecording "endmovie; host_timescale 1; host_framerate 0"
