--- a/record_cfg/settings.cfg
+++ b/record_cfg/settings.cfg
@@ -1,32 +1,35 @@
 echo Executing settings.cfg
 
+con_timestamp 1
+fps_max 0
+engine_no_focus_sleep 0
+
+// Account
+cl_notifications_show_ingame 0
+cl_hud_playerclass_playermodel_showed_confirm_dialog 1
+tf_training_has_prompted_for_loadout 1
+
+// graphic
 mat_motion_blur_enabled 1
 mat_motion_blur_forward_enabled 1
 mat_motion_blur_strength 1
 cl_cloud_settings 0
-con_timestamp 1
+viewmodel_fov_demo 80
 
-fps_max 0
-engine_no_focus_sleep 0
-
+// hud
 net_graph 0
-volume 0.5
 cl_showfps 0
 hud_fastswitch 1
-viewmodel_fov_demo 80
 r_drawviewmodel 1
-cl_notifications_show_ingame 0
 hud_combattext 1
 hud_combattext_healing 1
 cl_hud_minmode 0
-cl_hud_playerclass_playermodel_showed_confirm_dialog 1
-tf_training_has_prompted_for_loadout 1
-cl_hud_playerclass_use_playermodel 1
 
 // sound
 tf_dingalingaling 0
 voice_enable 1
 voice_scale 1
+volume 0.5
 
 // crosshair
 cl_crosshair_file "crosshair5"
