--- a/record_cfg/render_cfg/max_settings.cfg
+++ b/record_cfg/render_cfg/max_settings.cfg
@@ -220,8 +220,8 @@ cl_forcepreload 1 // Force preloading
 // ----------------------------------------------------------------------------
 // Print to console
 // ----------------------------------------------------------------------------
-echo "-------------------------------------------------------"
-echo "           Chris' maxquality config loaded.           "
-echo "-------------------------------------------------------"
-echo "Please direct all comments/queries/whatnot to"
-echo "#christf2 on QuakeNet."
+// echo "-------------------------------------------------------"
+// echo "           Chris' maxquality config loaded.           "
+// echo "-------------------------------------------------------"
+// echo "Please direct all comments/queries/whatnot to"
+// echo "#christf2 on QuakeNet."
