--- a/record_cfg/render_cfg/settings.cfg
+++ b/record_cfg/render_cfg/settings.cfg
@@ -68,8 +68,11 @@ alias open_charinfo_backpack
 alias open_charinfo_crafting
 alias open_charinfo_direct
 
+alias cl_crosshair_file
+
 // record
 alias startrecording "host_timescale 0.001; snd_soundmixer Default_Mix; recframerate; exec record_name.cfg"
+alias startrecordingaudio "snd_soundmixer Default_Mix; exec record_name_audio.cfg"
 alias stoprecording "endmovie; host_timescale 1; host_framerate 0"
 alias rev "exec review.cfg"
 alias ren "exec render_clean.cfg"
