better automates for rendering commands

--- a/record_cfg/render_cfg/settings.cfg
+++ b/record_cfg/render_cfg/settings.cfg
@@ -74,13 +74,30 @@ alias open_charinfo_direct
 alias cl_crosshair_file
 
 // record
-alias startrecording "host_timescale 0.001; snd_soundmixer Default_Mix; recframerate; exec record_name.cfg"
-alias startrecordingaudio "snd_soundmixer Default_Mix; exec record_name_audio.cfg"
+alias startrecording "host_timescale 0.001; snd_soundmixer Default_Mix; recframerate; exec render_cfg/record_name.cfg"
+alias startrecordingaudio "snd_soundmixer Default_Mix; exec render_cfg/record_name_audio.cfg"
 alias stoprecording "endmovie; host_timescale 1; host_framerate 0"
-alias rev "exec review.cfg"
-alias ren "exec render_clean.cfg"
+alias all "exec render_cfg/review.cfg"
+alias rev "all ; demoui2"
+alias ren "exec render_cfg/render_clean.cfg"
+
+// framerates
+alias 120	"alias recframerate host_framerate 2160 ; echo RECF_2160"	// 120 * 18
+alias 60	"alias recframerate host_framerate 1080 ; echo RECF_1080"	// 60 * 18
+alias 45	"alias recframerate host_framerate 810 ; echo RECF_810"		// 45 * 18
+alias 30	"alias recframerate host_framerate 540 ; echo RECF_540"		// 30 * 18
+alias low	"alias recframerate host_framerate 360 ; echo RECF_360"		// 45 * 8 OR 30 * 12
+
+//
+alias wc	"hud_saytext_time 12000"
+alias nc	"hud_saytext_time 0"
+
+alias rc	"ren ; 60 ; wc ; echo MODE_wc"		// render chat
+alias rv	"all ; 45 ; nc ; echo MODE_nc"		// render voice
+alias ra	"all ; 45 ; echo MODE_all"			// render all
+alias rs	"ren ; 45 ; echo MODE_normal"		// render n clips
+alias rh	"ren ; 60 ; echo MODE_high"			// render high clips
 
 // change for each clip
-alias recframerate "host_framerate 1080"
 cl_hud_playerclass_use_playermodel 0
-ren
+rh
