--- a/ffcfg_play.cfg
+++ b/ffcfg_play.cfg
@@ -1,10 +1,10 @@
 echo ">> START (ffcfg_play.cfg) _______________________________________"
 
 exec ffcfg_play_alias
-// exec ffcfg_play_binds // Don't commit this line uncommented
-exec ffcfg_play_graphic
-exec ffcfg_play_display
+exec ffcfg_play_binds // Don't commit this line uncommented
+// exec ffcfg_play_graphic
+// exec ffcfg_play_display
 exec ffcfg_play_input
-exec ffcfg_play_misc
+// exec ffcfg_play_misc
 
 echo "<< END (ffcfg_play.cfg) ________________________________________"
