--- a/ffcfg_play_display.cfg
+++ b/ffcfg_play_display.cfg
@@ -2,7 +2,7 @@ echo ">> START (ffcfg_play_display.cfg) _______________________________________"
 
 cl_showfps 0
 cl_software_cursor 0 // _ Buggy on Mac OS
-engine_no_focus_sleep 20 // Keeps ~30 fps even when not focused
+engine_no_focus_sleep 20 // Keeps ~30 fps when not focused
 
 cl_showerror 0
 net_graph 1
