--- a/ffcfg_play_input.cfg
+++ b/ffcfg_play_input.cfg
@@ -3,6 +3,8 @@ echo ">> START (ffcfg_play_input.cfg) _______________________________________"
 // _ Disabled due to input lag
 mat_vsync 0
 
+sensitivity "2.7"
+
 // _ No acceleration mouse settings and keyboard input smoothing
 m_filter 0
 m_customaccel_exponent 0
