--- a/ffcfg_play_keybinds.cfg
+++ b/ffcfg_play_keybinds.cfg
@@ -34,9 +34,9 @@ bind "b" "lastdisguise"
 bind "n" "disguiseteam"
 
 // Actions
-bind "f" "+taunt"
+bind "h" "+taunt"
 bind "g" "+use_action_slot_item"
-bind "h" "+context_action"
+// bind "h" "+context_action"
 
 // In-Game
 bind "j" "say"
