--- a/ffcfg_play_misc.cfg
+++ b/ffcfg_play_misc.cfg
@@ -1,5 +1,7 @@
 echo ">> START (ffcfg_play_misc.cfg) _______________________________________"
 
+engine_no_focus_sleep 20 // Keeps ~30 fps when not focused
+
 // _ Networking
 cl_updaterate 67 
 cl_cmdrate 67
